[package]
name = "rust-balance-bot"
version = "0.1.0"
authors = ["Gregory Holder <gregory.holder76@gmail.com>"]
edition = "2021"


[[bin]]
name = "rust-balance-bot"
test = false
bench = false

[dependencies]
# panic-serial = { version = "0.1.1", features = ["full"] }
ufmt = "0.2.0"
# rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
nb = "1.1.0"
mpu6050 = "0.1.6"
ufmt_float = { git = "https://github.com/tl8roy/ufmt_float", rev = "d99c9b183792c4a2736387394f54f693ce17de76" }
embedded-hal = "1.0"
avr-device = "0.5.4"
panic-halt = "0.2.0"
fast-math = "0.1.1"
bitfield-struct = "0.5.6"
thiserror-no-std = "2.0.2"
# thiserror-core = "1.0.0"
# [dependencies.embedded-hal-v0]
# version = "0.2.3"
# package = "embedded-hal"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "b2be3f950c5a6493baa5a39fb6022c5b37acb1f5"
features = ["arduino-nano"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
# codegen-units = 1
# debug = true
lto = true
opt-level = "s"
